import java.util.Scanner;
import java.util.Set;

public class BankClient {

    private int current = -1;
    private Scanner scanner = new Scanner(System.in);
    private boolean done = false;
    private Bank bank = new Bank();


    public void run() {
        scanner = new Scanner(System.in);
        while (!done) {
            System.out.println("Enter command (0 =quit, 1 = new,  3 = depsoit, 4 = loan," +
                    "5 = show , 6 = interest,7 = setforeign");

            int cmd = scanner.nextInt();
            processCommand(cmd);
        }

        scanner.close();
    }

    private void processCommand(int cmd) {

        if (cmd == 0) quit();
        else if (cmd == 1) newAccount();
        else if (cmd == 2) select();
        else if (cmd == 3) deposit();
        else if (cmd == 4) authorizeLoan();
        else if (cmd == 5) showAll();
        else if (cmd == 6) addInterest();
        else if  (cmd ==7) setForeign();
        else
            System.out.println("illegal command");

    }
    //code for the seven command methods appears her

    private void quit() {
        done = true;
        System.out.println("Goodbye!");
    }

    private void newAccount() {
        boolean isforeign = requestForeign();
        current = bank.newAccount(isforeign);
        System.out.println("You new account is" + current);
    }

    private void setForeign(){
        bank.setForeign(current,requestForeign());
    }
    private boolean requestForeign(){
        System.out.println("Enter 1 for fotreign, 2 for domestic:");
        int val = scanner.nextInt();
        return (val==1);
    }

    private void select() {
        System.out.print("Enter account#: ");
        current = scanner.nextInt();
        int balance = bank.getBalance(current);
        System.out.println("The balance of account " + current
                + " is " + balance);
    }

    private void deposit() {
        System.out.print("Enter deposit amount: ");
        int amt = scanner.nextInt();
        bank.deposit(current,amt);
    }


    private void authorizeLoan() {
        System.out.print("Enter loan amount: ");
        int loanamt = scanner.nextInt();
         if (bank.authorizeLoan(current, loanamt))
             System.out.println("Your loan is approved");
         else
             System.out.println("your loan is denied");

    }

    private void showAll() {
        System.out.println(bank.toString());
    }

    private void addInterest() {
      bank.addInterest();
    }



}